--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 
 .left-side {
     height: 450px;
-    background-image: url('../images/image-product-desktop.jpg');
+    background-image: url('./images/image-product-desktop.jpg');
     background-size: cover;
 }
 .right-side {
@@ -104,7 +104,7 @@ button:hover {
         width: 90%;
     }
     .left-side {
-        background-image: url('../images/image-product-mobile.jpg');
+        background-image: url('./images/image-product-mobile.jpg');
         width: 100%;
         background-size: cover;
         height: 235px;
